# MDS-RL_Snake_Agent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
conf/: test.yaml  train.yaml
conf/encoder/: egocentric.yaml  full.yaml
configs/: a2c_config.py  cnn_dqn_config.py  double_dqn_config.py  dqn_config.py  ppo_config.py
deliverables/poster/: poster.tex
deliverables/report/: report.tex
models/: dqn_full_grid_dense.py  snake_cnn_dqn.py  snake_dqn.py
notebooks/: F-01-intro.ipynb  Tutorial.ipynb
report/proposal/: main.tex
scripts/: exp2_window_cnn.sh  record.py  test.py  train.py  train_dqn.py  train_hard_cnn.sh  train_hard_mlp.sh  train_simple_cnn.sh  train_simple_mlp.sh
src/rl_snake/: __init__.py  agent.py  agents.py  cnn.py  env.py  evaluate.py  main.py  rewards.py  spaces.py  states.py  train.py  utils.py  visuals.py  wrapper.py
