[project]
name = "rl-snake"
version = "0.1.0"
description = "[CentraleSupélec] Reinforcement Learning Project on Benchmarking Algorithms using the Snake Game Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.2.3",
    "gymnasium-snake-game>=0.2.1",
    "moviepy>=2.2.1",
    "opencv-python-headless>=4.13.0.92",
    "stable-baselines3[extra]>=2.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
ignore = ["F401"]
